objects/Mil_Move_Custom_Setting__c/Mil_Move_Custom_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Mil_Move_Custom_Setting</label>
</CustomObject>