objects/Mil_Move_Custom_Setting__c/fields/Cast_Iron_retention_day__c.field-meta.xml
<CustomField>
    <fullName>Cast_Iron_retention_day__c</fullName>
    <label>Cast_Iron_retention_day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>