objects/Mil_Move_Custom_Setting__c/fields/eagle_connected_consumer_key__c.field-meta.xml
<CustomField>
    <fullName>eagle_connected_consumer_key__c</fullName>
    <inlineHelpText>eagle_connected_consumer_key</inlineHelpText>
    <label>eagle_connected_consumer_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>