objects/Mil_Move_Custom_Setting__c/fields/eagle_public_access_token__c.field-meta.xml
<CustomField>
    <fullName>eagle_public_access_token__c</fullName>
    <description>A secret token required to pass for all public access API</description>
    <inlineHelpText>A secret token required to pass for all public access API</inlineHelpText>
    <label>eagle_public_access_token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>