objects/Mil_Move_Custom_Setting__c/fields/eagle_rest_api_stub__c.field-meta.xml
<CustomField>
    <fullName>eagle_rest_api_stub__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Use stub response for all REST API or not</inlineHelpText>
    <label>eagle_rest_api_stub</label>
    <type>Checkbox</type>
</CustomField>