objects/Mil_Move_Custom_Setting__c/fields/Fitbit_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Fitbit_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fitbit Reminder</label>
    <type>Checkbox</type>
</CustomField>