objects/Mil_Move_Custom_Setting__c/fields/Log_Clean_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Log_Clean_Row_Limit__c</fullName>
    <label>Log_Clean_Row_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>