objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_account_name__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_account_name__c</fullName>
    <description>Account name for community</description>
    <inlineHelpText>Account name for community</inlineHelpText>
    <label>Mil_Move_account_name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>