objects/Mil_Move_Custom_Setting__c/fields/mil_move_android_app_url__c.field-meta.xml
<CustomField>
    <fullName>mil_move_android_app_url__c</fullName>
    <label>mil_move_android_app_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>