objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_android_connected_app_name__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_android_connected_app_name__c</fullName>
    <description>Name of the Android Connected App</description>
    <inlineHelpText>Name of the Android Connected App</inlineHelpText>
    <label>Mil_Move_android_connected_app_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>