objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_android_connected_consumer_key__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_android_connected_consumer_key__c</fullName>
    <description>connected app for Android device</description>
    <inlineHelpText>connected app for Android device</inlineHelpText>
    <label>Mil_Move_android_connected_consumer_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>