objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_API_Limit_Interval__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_API_Limit_Interval__c</fullName>
    <description>MOVE REST API Interval (In min) per API per user</description>
    <inlineHelpText>MOVE REST API Interval (In min) per API per user</inlineHelpText>
    <label>Mil_Move_API_Limit_Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>