objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_App_Name__c</fullName>
    <description>For Android Push Notifications</description>
    <inlineHelpText>For Android Push Notifications</inlineHelpText>
    <label>Mil_Move_App_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>