objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_app_review_username__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_app_review_username__c</fullName>
    <description>Community username for app reviewer</description>
    <inlineHelpText>Community username for app reviewer</inlineHelpText>
    <label>Mil_Move_app_review_username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>