objects/Mil_Move_Custom_Setting__c/fields/mil_move_captcha_site_key__c.field-meta.xml
<CustomField>
    <fullName>mil_move_captcha_site_key__c</fullName>
    <label>mil move captcha site key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>