objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_default_username__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_default_username__c</fullName>
    <label>Mil_Move_default_username</label>
    <length>32</length>
    <type>Text</type>
</CustomField>