objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Fitbit_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Fitbit_Client_Id__c</fullName>
    <label>Mil_Move_Fitbit_Client_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>