objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Fitbit_Scope__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Fitbit_Scope__c</fullName>
    <label>Mil_Move_Fitbit_Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>