objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Fitbit_Secret__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Fitbit_Secret__c</fullName>
    <label>Mil_Move_Fitbit_Secret</label>
    <length>64</length>
    <type>Text</type>
</CustomField>