objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Fitbit_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Fitbit_Sub_Code__c</fullName>
    <description>Fitbit Subscriber verification code</description>
    <label>Mil_Move_Fitbit_Sub_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>