objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_ios_connected_consumer_key__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_ios_connected_consumer_key__c</fullName>
    <description>connected app for iOS device</description>
    <inlineHelpText>connected app for iOS device</inlineHelpText>
    <label>Mil_Move_ios_connected_consumer_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>