objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Misfit_Api_Path__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Misfit_Api_Path__c</fullName>
    <label>Mil_Move_Misfit_Api_Path</label>
    <length>64</length>
    <type>Text</type>
</CustomField>