objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Mobile_Min_Version__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Mobile_Min_Version__c</fullName>
    <description>To control min support mobile version.</description>
    <inlineHelpText>To control min support mobile version. (i.e. 2.0.9)</inlineHelpText>
    <label>Mil_Move_Mobile_Min_Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>