objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Push_Service_Enable__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Push_Service_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control enable push service or not</description>
    <inlineHelpText>Control enable push service or not</inlineHelpText>
    <label>Mil_Move_Push_Service_Enable</label>
    <type>Checkbox</type>
</CustomField>