objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Push_Version__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Push_Version__c</fullName>
    <description>The earliest version of the MOVE app that supports push notifications.</description>
    <inlineHelpText>The earliest version of the MOVE app that supports push notifications</inlineHelpText>
    <label>Mil_Move_Push_Version</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>