objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Registration_Available__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Registration_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag to controlRegistration available or not</description>
    <inlineHelpText>A flag to controlRegistration available or not</inlineHelpText>
    <label>Mil_Move_Registration_Available</label>
    <type>Checkbox</type>
</CustomField>