objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_RemoteTips_Url__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_RemoteTips_Url__c</fullName>
    <description>URL to the Tips resource json</description>
    <inlineHelpText>URL to the Tips resource json</inlineHelpText>
    <label>Mil_Move_RemoteTips_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>