objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Resume_Time__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Resume_Time__c</fullName>
    <label>Mil_Move_Resume_Time</label>
    <type>DateTime</type>
</CustomField>