objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Rule_Time_Based_Enable__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Rule_Time_Based_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to enable time based rule engine or not</description>
    <inlineHelpText>A checkbox to enable time based rule engine or not</inlineHelpText>
    <label>Mil_Move_Rule_Time_Based_Enable</label>
    <type>Checkbox</type>
</CustomField>