objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Rule_Time_Based_Interval__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Rule_Time_Based_Interval__c</fullName>
    <description>The time interval in minutes to trigger time sensitive rule for schedule. If the interval between LastTimeSensitiveRuleTriggerDate and current time is smaller than this setting, rule engine will not be trigger.</description>
    <inlineHelpText>The time interval in minutes to trigger time sensitive rule for schedule. If the interval between LastTimeSensitiveRuleTriggerDate and current time is smaller than this setting, rule engine will not be trigger.</inlineHelpText>
    <label>Mil_Move_Rule_Time_Based_Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>