objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Rule_Time_Based_User_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Rule_Time_Based_User_Limit__c</fullName>
    <description>The upper limit number of users to trigger time sensitive rule per transaction</description>
    <inlineHelpText>The upper limit number of users to trigger time sensitive rule per transaction</inlineHelpText>
    <label>Mil_Move_Rule_Time_Based_User_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>