objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Token_Refresh_Iterator__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Token_Refresh_Iterator__c</fullName>
    <label>Mil Move Token Refresh Iterator</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>