objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_Token_Refresh_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_Token_Refresh_Timeout__c</fullName>
    <label>Mil Move Token Refresh Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>