objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_User_Agent_Android_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_User_Agent_Android_Keyword__c</fullName>
    <description>This keyword should appear in the device&#39;s user agent string to designate that it&#39;s an Android device</description>
    <inlineHelpText>This keyword should appear in the device&#39;s user agent string to designate that it&#39;s an Android device</inlineHelpText>
    <label>Mil_Move_User_Agent_Android_Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>