objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_User_Agent_Version_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_User_Agent_Version_Keyword__c</fullName>
    <description>This keyword should appear in the device&#39;s user agent string to further parse the device&#39;s app version</description>
    <inlineHelpText>This keyword should appear in the device&#39;s user agent string to further parse the device&#39;s app version</inlineHelpText>
    <label>Mil_Move_User_Agent_Version_Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>