objects/Mil_Move_Custom_Setting__c/fields/Mil_Move_username_suffix__c.field-meta.xml
<CustomField>
    <fullName>Mil_Move_username_suffix__c</fullName>
    <label>Mil_Move_username_suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>