objects/Mil_Move_Custom_Setting__c/fields/mil_soa_available_hour__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_available_hour__c</fullName>
    <description>SOA server available hour. (i.e. 0,1,2,3,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23)</description>
    <inlineHelpText>SOA server available hour. (i.e. 0,1,2,3,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23)</inlineHelpText>
    <label>mil_soa_available_hour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>