objects/Mil_Move_Custom_Setting__c/fields/mil_soa_client_cert_name__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_client_cert_name__c</fullName>
    <inlineHelpText>SOA client cert name defined in Security Controls -&gt; Certificate and Key Management</inlineHelpText>
    <label>mil_soa_client_cert_name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>