objects/Mil_Move_Custom_Setting__c/fields/mil_soa_crypto_key__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_crypto_key__c</fullName>
    <description>AES key for Mil_SOA_Credential object encryption</description>
    <inlineHelpText>AES key for Mil_SOA_Credential object encryption</inlineHelpText>
    <label>mil_soa_crypto_key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>