objects/Mil_Move_Custom_Setting__c/fields/mil_soa_health_service_url__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_health_service_url__c</fullName>
    <label>mil_soa_health_service_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>