objects/Mil_Move_Custom_Setting__c/fields/mil_soa_login_user_type__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_login_user_type__c</fullName>
    <label>mil_soa_login_user_type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>