objects/Mil_Move_Custom_Setting__c/fields/mil_soa_password__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_password__c</fullName>
    <description>Encrypted field for mil_soa_password</description>
    <inlineHelpText>Encrypted field for mil_soa_password</inlineHelpText>
    <label>mil_soa_password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>