objects/Mil_Move_Custom_Setting__c/fields/mil_soa_username__c.field-meta.xml
<CustomField>
    <fullName>mil_soa_username__c</fullName>
    <label>mil_soa_username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>