objects/Mil_Move_Custom_Setting__c/fields/RunDataSync__c.field-meta.xml
<CustomField>
    <fullName>RunDataSync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RunDataSync</label>
    <type>Checkbox</type>
</CustomField>