objects/Mil_Move_Custom_Setting__c/fields/Switch_Available__c.field-meta.xml
<CustomField>
    <fullName>Switch_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Switch Available</label>
    <type>Checkbox</type>
</CustomField>